# gamgui

./: .gitignore  .gitignore.backup  CHANGELOG.md  CLOUD_TESTING.md  CONNECTION_ISSUES_SOLUTION.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_QUICK_START.md  DIAGNOSTICO_SESSAO_ADMIN.md  DOCKER_GAM7_INTEGRATION.md  DOCKER_IMAGE_CHANGES.md  Dockerfile.gam  ENVIRONMENT_CONFIGURATION.md  GAM_DOCKER_INTEGRATION.md  GAM_INTEGRATION.md  GKE_KUBERNETES_INTEGRATION.md  IMAGE_UPDATE_SOLUTION.md  LICENSE  ORGANIZATION_SUMMARY.md  README.md  SECRET_MANAGER_DUPLICATE_FIX.md  SECURITY.md  SECURITY_SUMMARY.md  VIRTUAL_SESSION_CHANGES.md  build-and-deploy-client.sh  build-and-push-client.sh  build-and-push-gam.sh  build-and-push-server.sh  cleanup-secret-versions.sh  deploy-and-test-cloud.sh  deploy-client.sh  deploy-fixed-server.sh  deploy.sh  package-lock.json  server-config.yaml  test-docker-gam.js  verify-websocket-config.sh
backend/: .env.example  cloudbuild-prod.yaml  cloudbuild-staging.yaml  cloudbuild-validation.yaml  main.py  pyproject.toml  requirements.txt
backend/clients/: firestore_client.py  secret_manager_client.py
backend/config/: __init__.py  environment.py  logging.py
backend/controllers/: secret_controller.py  session_controller.py  socketio_controller.py
backend/middlewares/: auth_middleware.py
backend/models/: session_model.py
backend/repositories/: base_repository.py  session_repository.py  user_repository.py
backend/routes/: auth_routes.py  secret_routes.py  session_routes.py
backend/schemas/: auth_schemas.py  common.py  health_schemas.py  responses.py  session_schemas.py
backend/services/: audit_service.py  auth_service.py  kubernetes_service.py  secret_service.py  session_service.py  socketio_service.py
ci/: .gitignore  .terraform.lock.hcl  README.md  backend.tf  bootstrap.sh  main.tf  outputs.tf  providers.tf  variables.tf  versions.tf
config/: environments.json
docs/: AUTHORIZED_DOMAINS_FIX.md  CREDENTIALS_FLOW.md  DEVELOPMENT.md  GETTING_STARTED.md  KUBECTL_AUTHENTICATION_FIX.md  KUBERNETES_ADAPTER_FIX.md  KUBERNETES_AUTH_FIX.md  TERRAFORM_INTEGRATION.md  TROUBLESHOOTING.md  WEBSOCKET_CONNECTION_SOLUTION.md  WEBSOCKET_SESSIONS.md  WEBSOCKET_SESSION_DIAGNOSTICS.md  WEBSOCKET_STDOUT_ERROR_FIX.md
frontend/: .env.example  Dockerfile  cloudbuild-prod.yaml  cloudbuild-staging.yaml  cloudbuild-validation.yaml  eslint.config.mjs  index.html  package-lock.json  package.json  tsconfig.server.json
gamgui-app/: .clinerules  package-lock.json  package.json
gamgui-client/: .dockerignore  .env.example  .gitignore  Dockerfile  cloudbuild-prod.yaml  cloudbuild-staging.yaml  cloudbuild-validation.yaml  cloudbuild.yaml  eslint.config.mjs  express-plugin.ts  index.html  package-lock.json  package.json  vite.config.ts
gamgui-gam-docker/: Dockerfile  README.md  cloudbuild-prod.yaml  cloudbuild-staging.yaml  (+2 more)
(+510 files in other folders)
