# pyproject.toml
[project]
name = "gamgui-backend"
version = "0.1.0"
description = "Backend API for GAMGUI - A self-hosted, open-source, centrally managed, auditable GAM server for Google IT Admins"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Automate Army", email = "team@automatearmy.com" }
]
maintainers = [
    { name = "Automate Army", email = "team@automatearmy.com" }
]
keywords = ["google", "workspace", "gam", "admin", "management", "fastapi", "python"]
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]",
    "uvicorn[standard]",
    "python-multipart==0.0.20",
    "websockets==15.0.1",
    "python-socketio==5.13.0",
    "pydantic==2.11.5",
    "PyJWT==2.10.1",
    "google-auth==2.40.3",
    "google-cloud-container==2.53.0",
    "google-cloud-secret-manager==2.24.0",
    "google-cloud-logging==3.12.1",
    "kubernetes==32.0.1",
    "firebase-admin==6.9.0",
    "python-dotenv==1.1.0",
]

[project.optional-dependencies]
dev = [
    "ruff==0.11.13",
]

[project.urls]
Homepage = "https://gamgui.com"
Repository = "https://github.com/automatearmy/gamgui.git"
Issues = "https://github.com/automatearmy/gamgui/issues"
Documentation = "https://gamgui.com/docs"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.mypy]
strict = true

[tool.ruff]
# Linter, Formatter, and Import Sorter configuration
line-length = 120
# Select rule codes to enable. Add more as needed (e.g., 'I' for isort).
# See https://docs.astral.sh/ruff/rules/ for all rules.
select = ["E", "F", "W", "I"] # E=pycodestyle errors, F=pyflakes, W=pycodestyle warnings, I=isort
ignore = []
fixable = []
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    ".env",
]

[tool.ruff.format]
# Use black formatting style via ruff's formatter (optional, can use black directly too)
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
# Allow unused variables in `__init__.py` files commonly used for exports.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.isort]
# Configure import sorting
known-first-party = ["config", "controllers", "middleware", "models", "repositories", "schemas", "services", "utils"] # Define project's own modules
force-sort-within-sections = true
